--- a/client/src/Dashboard/Table.module.css
+++ b/client/src/Dashboard/Table.module.css
@@ -5,7 +5,7 @@
           font-family: var(--Heading-fonts);
 }
 .TableHead{
-          background-color: rgb(230, 230, 230);
+    background: #f2f3f4;
           color: rgb(16, 164, 223);
 }
 td{
