--- a/client/src/Components/Carousel.module.css
+++ b/client/src/Components/Carousel.module.css
@@ -1,101 +1,104 @@
 .App {
-    font-family: sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 550px;
-  } 
-  .carousel_wrapper {
-    width: 100%;
-  }
-  .carousel_wrapper button{
-    color: var(--primary-dark);
-  }
+  font-family: sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 550px;
+} 
+.carousel_wrapper {
+  width: 100%;
+}
+.carousel_wrapper button{
+  color: var(--primary-dark);
+}
+
+.carousel_wrapper button:hover{
+  color: white;
+  background-color: var(--primary-dark) !important;
+}
+.rec-carousel-item:focus {
+  outline: none;
+}
+.MianCard{
+    height: max-content;
+    width: 85%;
+    background-color: rgb(250, 250, 250);
+    border-radius: 10px;
+    padding-bottom: 10px;
+}
+.cardHead{
+  height: 40px;
+  width: 200px;
+  border-radius: 50px;
+  margin: auto;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: normal;
+  color: white;
+  font-size: var(--main-heading-size);
+  background-color: var(--primary-light);
+  font-family: var(--Heading-fonts);
+}
+.cardImage{
+  height: 200px;
+  width: 60%;
+  object-fit: cover;
+  margin-left: 20%;
+}
+.CardHeading{
+  font-weight: bold;
+  color: var(--primary-dark);
+  font-size: var(--main-heading-size);
+  font-family: var(--Heading-fonts);
+  padding: 0 40px;
   
-  .carousel_wrapper button:hover{
-    color: white;
-    background-color: var(--primary-dark) !important;
-  }
-  .rec-carousel-item:focus {
-    outline: none;
-  }
-  .MianCard{
-      height: max-content;
-      width: 100%;
-      margin: 10px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-  }
-  .cardHead{
-    height: 30px;
-    width: 200px;
-    border-radius: 50px;
-    margin: auto;
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: normal;
-    color: white;
-    font-size: var(--main-heading-size);
-    background-color: var(--primary-dark);
-    font-family: var(--Heading-fonts);
-  }
-  .cardImage{
-    height: 200px;
-    width: 60%;
-    margin-left: 20%;
-  }
-  .CardHeading{
-    font-weight: bold;
-    color: var(--primary-dark);
-    font-size: var(--main-heading-size);
-    font-family: var(--Heading-fonts);
-    
-  }
-  .CardPara{
-    text-align: center ;
-    color: var(--primary-gray);
-    font-size: .95em;
-    font-family: var(--Heading-fonts);
-  }
+}
+.CardPara{
+  text-align: center ;
+  color: var(--primary-gray);
+  font-size: .9em;
+  padding: 0 50px;
+  font-family: var(--Heading-fonts);
+}
+.CardLanguage{
+  height: 90px;
+  width: 70%;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:center;
+  align-items: center;
+} 
+.Lang1{
+  height: 30px;
+  width: 100px;
+  border: 2px solid ;
+  border-radius: 50px;
+  margin: 0 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color:var(--primary-dark);
+  font-size: 14px;
+  font-weight: bold;
+  cursor: pointer;
+  transition:  all .10s linear;
+}
+.Lang1:hover{
+  background-color: var(--primary-light);
+  color: white;
+}
+.cardimg{
+  height: 100%;
+  width: 100%;
+}
+
+@media (max-width:1230){
   .CardLanguage{
-    height: 100px;
-    width: 70%;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;
+    height: 120px;
+    border: 1px solid !important;
   }
-  .Lang1{
-    height: 30px;
-    width: 100px;
-    border: 2px solid ;
-    border-radius: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color:var(--primary-dark);
-    font-size: 14px;
-    font-weight: bold;
-    cursor: pointer;
-    transition:  all .10s linear;
-  }
-  .Lang1:hover{
-    background-color: var(--primary-dark);
-    color: white;
-  }
-  .cardimg{
-    height: 100%;
-    width: 100%;
-  }
-  
-  @media (max-width:1230){
-    .CardLanguage{
-      height: 120px;
-      border: 1px solid !important;
-    }
-  }
+}
