--- a/client/src/Components/Events.module.css
+++ b/client/src/Components/Events.module.css
@@ -1,4 +1,3 @@
-
 .EventSection {
     height: max-content;
     display: flex;
@@ -51,7 +50,7 @@
 }
 
 .Gallery_part1_img {
-    height: 250px;
+    height: 290px;
     width: 100%;
     position: absolute;
     overflow: hidden;
@@ -68,7 +67,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 1px 0px 18px -2px rgba(231, 231, 231, 0.75);
+    box-shadow: 0px 5px 15px 0px #eee;
 }
 
 .EventArrow {
@@ -98,6 +97,7 @@
 .Eventimg {
     height: 100%;
     width: 100%;
+    object-fit: cover;
     transition: all .20s linear;
 }
 
