--- a/client/src/Components/Faqs.module.css
+++ b/client/src/Components/Faqs.module.css
@@ -1,4 +1,3 @@
-
 .conta{
     height: max-content;
     padding:50px;
@@ -20,25 +19,30 @@
 }
 
 .faq h1{
-    margin-top: 20px;
-    /* font-size:30px; */
-    margin-bottom: 40px;
+    margin: 20px;
     font-family: var(--Heading-fonts);
-
+    
 }
-
+.faq h1 span{
+    color: var(--primary-light);
+}
+.faq p{
+    margin-bottom: 30px; 
+    color: #999;
+}
 .f{
     min-height: 40px;
     width: 100%;
     /* border: solid 1px black; */
-    /* box-shadow:1px 5px 6px 8px rgba(42, 104, 129, 0.11); */
-    box-shadow: rgba(91, 110, 117, 0.151) 0px 6px 18px 0px;
+    box-shadow:0 0 4px 0 rgb(202, 187, 234);
+    /* box-shadow: rgba(91, 110, 117, 0.151) 0px 6px 18px 0px; */
     margin-top: 15px;
     border-radius: 7px;
     display: flex;
     justify-content: space-between;
     align-items:center;
-    background-color: white;
+    background-color: rgb(250, 250, 250);
+    /* background-color: var(--primary-gray); */
     flex-direction: column;
     transition: all ease-out 0.30s;
     margin-top: 20px;
