--- a/client/src/Components/Reviews.module.css
+++ b/client/src/Components/Reviews.module.css
@@ -1,16 +1,19 @@
-
 .revcon{
     /* background-color: rgb(252,252,254); */
     /* border: solid 1px black; */
     /* width: 100vw; */
     padding: 0;
+    
+}
 
+.main_Ref{
+    padding: 50px;
 }
 
 /* .mrev{
     height: 95%;
     width: 100%;
-    /* border: solid 1px black; 
+    border: solid 1px black; 
 } */
 
 
@@ -18,16 +21,17 @@
 .rev{
     height:270px;
     /* background-color: var(--primary-light); */
-    width: 100%;
+    /* width: 100%; */
     /* border: solid 1px orange; */
     display: flex;
     justify-content: space-between;
     align-items:flex-start;
     flex-direction: column;
     margin-top: 15px;
+    margin-left: 45px;
     margin-bottom: 15px;
     border-radius: 5px;
-    box-shadow: 1px 0px 18px -2px rgba(231, 231, 231, 0.75);
+    box-shadow: 0 0 10px 0 #eee;
     cursor: pointer;
     transition: all linear 0.20s;
     font-family: var(--Para-fonts);
@@ -36,12 +40,10 @@
 }
 
 .rev:hover{
-    /* margin-top: -5px; */
     transform: translateY(-10px);
 }
 
 .port{
-    /* border: solid 1px yellow; */
     width: 100%;
     height: 70px;
     display: flex;
