--- a/client/src/Components/RoadMap.module.css
+++ b/client/src/Components/RoadMap.module.css
@@ -1,9 +1,3 @@
-/* ////////// */
-
-
-
-/* //////// */
-
 .slide-container{
     height: max-content;
     width: max-content;
@@ -12,7 +6,7 @@
 }
 
 .slide{
-    box-shadow: 1px 0px 18px -2px rgb(233, 232, 232);
+    box-shadow: 0px 0px 15px 0px #eee;
     /* border: solid 5px black; */
     width: 90%;
     margin:100px auto;
@@ -23,7 +17,7 @@
 }
 
 .row{
-background: rgba(237, 238, 238, 0.524);
+/* background: rgba(237, 238, 238, 0.524); */
         display: flex;
         justify-content: space-between;
         align-items: center;
