--- a/client/src/Components/Services.module.css
+++ b/client/src/Components/Services.module.css
@@ -1,4 +1,3 @@
-
 .par{
     width: 100%;
     height: max-content;
@@ -22,7 +21,7 @@
    flex-direction: column;
    justify-content: center;
    align-items: center;
-   padding: 10px 30px 30px 30px;
+   padding: 40px 30px 5px 30px;
 }
 
 .headingser span{
@@ -39,6 +38,7 @@
 
 .headingser p:nth-child(2){
     font-size: 1.1em;
+    margin: -10px 0 10px 0;
     color: rgb(188, 183, 183);
 }
 
