--- a/client/src/Components/Blogs.module.css
+++ b/client/src/Components/Blogs.module.css
@@ -9,10 +9,9 @@
 }
 
 .BlogCard {
-    height: 400px;
-    width: 320px;
+    height: 450px;
+    width: 350px;
     border-radius: 10px;
-    /* background-color: rgb(245, 245, 245); */
     box-shadow: 0 0 10px 0 rgb(200, 200, 200);
     border-radius: 10px;
     padding: 0;
@@ -45,18 +44,24 @@
     background-color: white;
     box-shadow: 0 0px 5px 0 #999;
     display: flex;
+    align-items: center;
+    justify-content: space-evenly;
     overflow: hidden;
    
 }
 
 .Bloguserima {
-    height: 100%;
-    width: 45%;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+}
+.Bloguserima img{
+    border-radius: 50%;
 }
 
 .Blogusrinfo {
-    height: 100%;
-    width: 55%;
+    height: 80%;
+    width: 50%;
     font-family: var(--Heading-fonts);
 }
 
