--- a/client/src/Components/ComCourses.module.css
+++ b/client/src/Components/ComCourses.module.css
@@ -15,6 +15,7 @@
 .Ccourses_banner_image{
     width: 100%;
     height: 100%;
+    object-fit: cover;
     position: absolute;
     top: 0;
     left: 0;
@@ -88,10 +89,6 @@
     font-family: var(--Heading-fonts);
     line-height: 2.5vh;
 }
-.Ccourses_banners:nth-child(1){
-    top: 0;
-    left: 35%;
-}
 .Ccourses_banners:nth-child(2){
     top: 40%;
     left: 9%;
@@ -101,7 +98,11 @@
     right: 10%;
 }
 .Ccourses_banners:nth-child(4){
-    bottom: 0;
+    bottom: 5%;
+    left: 35%;
+}
+.Ccourses_banners:nth-child(5){
+    top: 5%;
     left: 35%;
 }
 .Ccourses_banners_logo{
