--- a/client/src/Components/Footer.module.css
+++ b/client/src/Components/Footer.module.css
@@ -1,4 +1,5 @@
 .MainFooter {
+    border: 1px solid var(--primary-dark);
     background-color: var(--primary-dark);
     padding: 2% 5% 0;
 }
@@ -144,7 +145,6 @@
     margin: 0 30px;
     width: max-content;
     height: max-content;
-    background-color: red;
     position: relative;
     overflow: hidden;
 }
@@ -208,5 +208,11 @@
     }
     .followPara {
         width: 80%;
+    }
+}
+
+@media (max-width:375px) {
+    .subcribe{
+        margin: auto;
     }
 }
