--- a/client/src/Components/Reviews.module.css
+++ b/client/src/Components/Reviews.module.css
@@ -85,7 +85,7 @@
     position: relative;
     /* border: solid 1px black; */
     height: 50px;
-    width: 90%; 
+    width: 55%; 
      text-align: justify; 
      margin-left: 20px;
     margin-top: 0px;
@@ -96,6 +96,10 @@
     -webkit-line-clamp: 2;
     text-overflow: ellipsis;
     white-space: normal;
+}
+.video{
+    height:100%;
+    width: 40%; 
 }
 /* .rev p::after{
     content: '...';
