--- a/client/src/Components/Navbar.css
+++ b/client/src/Components/Navbar.css
@@ -169,10 +169,17 @@
     justify-content: center;
 }
 .coursesGif{
+    position: relative;
     width: 40%;
     height: 100%;
     display: flex;
     align-items: center;
+}
+.coursesGif p{
+    position: absolute;
+    bottom:-5px;
+   right:80px;
+    color: darkblue;
 }
 .coursesGif img{
     width: 60%;
